--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
       href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="saas/main.css" />
@@ -35,31 +43,29 @@
             <a href="#price" class="header__link">Tarif</a>
           </li>
           <li class="header__item">
-            <a href="#contact" class="header__link">Contact</a>
+            <a href="#tourism" class="header__link">Tourisme</a>
           </li>
           <li class="header__item">
-            <a href="#tourism" class="header__link">Tourisme</a>
+            <a href="#contact" class="header__link">Contact</a>
           </li>
         </ul>
       </nav>
     </header>
 
     <section class="section-home">
-      <div class="slideshow-container">
-        <div class="slideshow">
-          <img
-            src="./img/home-1.jpg"
-            alt="Photo d'ensemble des gîtes"
-            class="slideshow__image"
-          />
-          <div class="slideshow__title">
-            <h1 class="slideshow__title-main">
-              Location de gîtes dans les Cévennes
-            </h1>
-            <p class="slideshow__title-sub">
-              Réservez nos appartement de 1 à 2 personnes
-            </p>
-          </div>
+      <div class="slideshow">
+        <img
+          src="./img/Accueil_1.webp"
+          alt="Photo d'ensemble des gîtes"
+          class="slideshow__image"
+        />
+        <div class="slideshow__title">
+          <h1 class="slideshow__title-main">
+            Location de gîtes dans les Cévennes
+          </h1>
+          <p class="slideshow__title-sub">
+            Réservez nos appartement de 1 à 2 personnes
+          </p>
         </div>
       </div>
     </section>
@@ -76,7 +82,56 @@
           alt="Photo d'ensemble des gîtes"
           class="section-accommodations__picture-img"
         />
-      </div>
+      </picture>
+    </section>
+
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 1" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--2">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 13" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--3">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 3" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--4">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 4" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--5">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 5" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--6">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 6" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--7">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 7" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--8">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 8" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--9">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 9" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--10">
+        <img
+          src="img/picSaintLoup.jpg"
+          alt="Gallery 10"
+          class="gallery__img"
+        />
+      </figure>
+      <figure class="gallery__item gallery__item--11">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--12">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 12" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--13">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 2" class="gallery__img" />
+      </figure>
+      <figure class="gallery__item gallery__item--14">
+        <img src="img/picSaintLoup.jpg" alt="Gallery 14" class="gallery__img" />
+      </figure>
     </section>
   </body>
 </html>
