refacto(): clean and delete useless code

--- a/index.html
+++ b/index.html
@@ -37,25 +37,77 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__item">
-            <a href="#home" class="header__link">Accueil</a>
+            <a href="#home" class="header__link"
+              >Accueil
+              <svg
+                class="header__link__graphic header__link__graphic--slide"
+                width="300%"
+                height="100%"
+                viewBox="0 0 1200 60"
+                preserveAspectRatio="none"
+              >
+                <path
+                  d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"
+                ></path>
+              </svg>
+            </a>
           </li>
           <li class="header__item">
-            <a href="#price" class="header__link">Tarif</a>
+            <a href="#price" class="header__link"
+              >Tarif
+              <svg
+                class="header__link__graphic header__link__graphic--slide"
+                width="300%"
+                height="100%"
+                viewBox="0 0 1200 60"
+                preserveAspectRatio="none"
+              >
+                <path
+                  d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"
+                ></path>
+              </svg>
+            </a>
           </li>
           <li class="header__item">
-            <a href="#tourism" class="header__link">Tourisme</a>
+            <a href="#tourism" class="header__link"
+              >Tourisme
+              <svg
+                class="header__link__graphic header__link__graphic--slide"
+                width="300%"
+                height="100%"
+                viewBox="0 0 1200 60"
+                preserveAspectRatio="none"
+              >
+                <path
+                  d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"
+                ></path>
+              </svg>
+            </a>
           </li>
           <li class="header__item">
-            <a href="#contact" class="header__link">Contact</a>
+            <a href="#contact" class="header__link"
+              >Contact
+              <svg
+                class="header__link__graphic header__link__graphic--slide"
+                width="300%"
+                height="100%"
+                viewBox="0 0 1200 60"
+                preserveAspectRatio="none"
+              >
+                <path
+                  d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"
+                ></path>
+              </svg>
+            </a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <section class="section-home">
+    <section class="section-slider">
       <div class="slideshow">
         <img
-          src="./img/Accueil_1.webp"
+          src="./img/Accueil_2.webp"
           alt="Photo d'ensemble des gîtes"
           class="slideshow__image"
         />
@@ -64,7 +116,7 @@
             Location de gîtes dans les Cévennes
           </h1>
           <p class="slideshow__title-sub">
-            Réservez nos appartement de 1 à 2 personnes
+            Réservez nos appartements de 1 à 2 personnes
           </p>
         </div>
       </div>
@@ -83,6 +135,14 @@
           class="section-accommodations__picture-img"
         />
       </picture>
+    </section>
+
+    <section class="section-area_presentation">
+      PRESENTATION
+    </section>
+
+    <section class="section-services">
+      Nos prestations
     </section>
 
     <section class="gallery">
@@ -114,11 +174,7 @@
         <img src="img/picSaintLoup.jpg" alt="Gallery 9" class="gallery__img" />
       </figure>
       <figure class="gallery__item gallery__item--10">
-        <img
-          src="img/picSaintLoup.jpg"
-          alt="Gallery 10"
-          class="gallery__img"
-        />
+        <img src="img/picSaintLoup.jpg" alt="Gallery 10" class="gallery__img" />
       </figure>
       <figure class="gallery__item gallery__item--11">
         <img src="img/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
@@ -130,8 +186,12 @@
         <img src="img/picSaintLoup.jpg" alt="Gallery 2" class="gallery__img" />
       </figure>
       <figure class="gallery__item gallery__item--14">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 14" class="gallery__img" />
+        <img src="img/piscine_3.jpg" alt="Gallery 14" class="gallery__img" />
       </figure>
     </section>
+
+    <footer class="footer">
+      FOOTER
+    </footer>
   </body>
 </html>
