feat(accommodations): mise en place de la section "Nos Hébergements"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="saas/main.css" />
-    <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png" /> -->
+    <link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
 
     <script src="script.js" async></script>
 
@@ -104,94 +104,159 @@
       </nav>
     </header>
 
-    <section class="section-slider">
-      <div class="slideshow">
-        <img
-          src="./img/Accueil_2.webp"
-          alt="Photo d'ensemble des gîtes"
-          class="slideshow__image"
-        />
-        <div class="slideshow__title">
-          <h1 class="slideshow__title-main">
-            Location de gîtes dans les Cévennes
-          </h1>
-          <p class="slideshow__title-sub">
-            Réservez nos appartements de 1 à 2 personnes
-          </p>
+    <main>
+      <section class="section-slider">
+        <div class="slideshow">
+          <img
+            src="./img/Accueil_2.webp"
+            alt="Photo d'ensemble des gîtes"
+            class="slideshow__image"
+          />
+          <div class="slideshow__title">
+            <h1 class="slideshow__title-main">
+              Location de gîtes dans les Cévennes
+            </h1>
+            <p class="slideshow__title-sub">
+              Réservez nos appartements de 1 à 2 personnes
+            </p>
+          </div>
         </div>
+      </section>
+      <div class="separator">
+        <img src="./img/separateur-1.png" alt="séparateur" />
       </div>
-    </section>
-    <div class="separator">
-      <img src="./img/separateur-1.png" alt="séparateur" />
-    </div>
 
-    <section class="section-accommodations">
-      <h1 class="heading-primary u-margin-bottom-medium">Nos hébergements</h1>
+      <section class="section-accommodations">
+        <h1 class="heading-primary u-margin-bottom-big">Nos Hébergements</h1>
 
-      <picture class="section-accommodations__picture">
-        <img
-          src="./img/gite1.1.jpg"
-          alt="Photo d'ensemble des gîtes"
-          class="section-accommodations__picture-img"
-        />
-      </picture>
-    </section>
+        <div class="accommodation accommodation--1">
+          <figure class="accommodation__images">
+            <img
+              src="/img/pinson_0.webp"
+              alt="Gite les pinsons"
+              class="accommodation__images--1"
+            />
+            <img
+              src="/img/pinson_1.webp"
+              alt="Gite les pinsons"
+              class="accommodation__images--2 accommodation__images--2--right"
+            />
+          </figure>
+          <div class="accommodation__details">
+            <h2 class="heading-secondary">
+              Nids des pinsons
+              <img
+                src="/img/pinson_oiseau.webp"
+                alt="pinson"
+                class="accommodation__details__image"
+              />
+            </h2>
+            <h3 class="heading-tertiary u-align-right">Studio pour 2 personnes</h3>
+            <p>
+              En rez de chaussée devant la piscine, venez profiter de ce superbe
+              studio sur-équipé avec vue sur les bois de chênes côté fenêtre et
+              sur terrasse privative côté baie vitrée
+            </p>
+            <a href="#" class="btn btn--primary">Réserver maintenant</a>
+          </div>
+        </div>
 
-    <section class="section-area_presentation">
-      PRESENTATION
-    </section>
+        <div class="accommodation accommodation--2">
+          <figure class="accommodation__images">
+            <img
+              src="/img/pinson_0.webp"
+              alt="Gite les pinsons"
+              class="accommodation__images--1"
+            />
+            <img
+              src="/img/pinson_1.webp"
+              alt="Gite les pinsons"
+              class="accommodation__images--2 accommodation__images--2--left"
+            />
+          </figure>
+          <div class="accommodation__details">
+            <h2 class="heading-secondary accommodation__details__heading--pinsons">
+              Nids des pinsons
+              <img
+                src="/img/mesange_oiseau_d.png"
+                alt="pinson"
+                class="accommodation__details__image"
+              />
+            </h2>
+            <h3 class="heading-tertiary u-align-left">Studio pour 2 personnes</h3>
+            <p>
+              En rez de chaussée devant la piscine, venez profiter de ce superbe
+              studio sur-équipé avec vue sur les bois de chênes côté fenêtre et
+              sur terrasse privative côté baie vitrée
+            </p>
+            <a href="#" class="btn btn--primary">Réserver maintenant</a>
+          </div>
+        </div>
+      </section>
 
-    <section class="section-services">
-      Nos prestations
-    </section>
+      <section class="section-area_presentation">PRESENTATION</section>
 
-    <section class="gallery">
-      <figure class="gallery__item gallery__item--1">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 1" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--2">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 13" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--3">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 3" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--4">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 4" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--5">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 5" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--6">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 6" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--7">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 7" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--8">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 8" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--9">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 9" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--10">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 10" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--11">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--12">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 12" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--13">
-        <img src="img/picSaintLoup.jpg" alt="Gallery 2" class="gallery__img" />
-      </figure>
-      <figure class="gallery__item gallery__item--14">
-        <img src="img/piscine_3.jpg" alt="Gallery 14" class="gallery__img" />
-      </figure>
-    </section>
+      <section class="section-services">Nos prestations</section>
 
+      <section class="gallery">
+        <figure class="gallery__item gallery__item--1">
+          <img src="img/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+          <img src="img/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+          <img src="img/ext_6.webp" alt="Gallery 3" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+          <img src="img/repas_1.webp" alt="Gallery 4" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+          <img src="img/ext_4.webp" alt="Gallery 5" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+          <img src="img/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--7">
+          <img src="img/ext_2.webp" alt="Gallery 7" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--8">
+          <img src="img/gite1.webp" alt="Gallery 8" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--9">
+          <img src="img/ext_1.webp" alt="Gallery 9" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--10">
+          <img src="img/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--11">
+          <img
+            src="img/picSaintLoup.jpg"
+            alt="Gallery 11"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--12">
+          <img
+            src="img/entrée_domaine_1.webp"
+            alt="Gallery 12"
+            class="gallery__img"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--13">
+          <img src="img/ext_5.webp" alt="Gallery 2" class="gallery__img" />
+        </figure>
+        <figure class="gallery__item gallery__item--14">
+          <img src="img/piscine_3.jpg" alt="Gallery 14" class="gallery__img" />
+        </figure>
+      </section>
+    </main>
     <footer class="footer">
-      FOOTER
+      <img
+        src="/img/footer_image-removebg-preview (1).png"
+        alt="footer"
+        class="footer__image"
+      />
     </footer>
   </body>
 </html>
