feat(responsive): improve responsive for accommodation sections & Start footer implementation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="saas/main.css" />
     <link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
 
-    <script src="script.js" async></script>
+    <script type="module" src="script.js" async></script>
 
     <title>Domaine Chante Cévennes</title>
   </head>
@@ -147,13 +147,8 @@
             />
           </figure>
           <div class="accommodation__details">
-            <h2 class="heading-secondary">Nids des pinsons</h2>
-            <img
-              src="/img/pinson_oiseau.webp"
-              alt="pinson"
-              class="accommodation__details__image accommodation__details__image--1"
-            />
-            <h3 class="heading-tertiary u-align-right">
+            <h2 class="heading-secondary accommodation__details__heading--pinsons">Nids des pinsons</h2>
+            <h3 class="heading-tertiary">
               Studio pour 2 personnes
             </h3>
             <p>
@@ -184,11 +179,6 @@
             >
               Nids des mésanges
             </h2>
-            <img
-              src="/img/mesange_oiseau_d.png"
-              alt="pinson"
-              class="accommodation__details__image accommodation__details__image--2"
-            />
             <h3 class="heading-tertiary u-align-left">
               Studio pour 2 personnes
             </h3>
@@ -354,6 +344,7 @@
       </section>
     </main>
     <footer class="footer">
+      <img src="/img/Footer/Tourism_herault.png" alt="" class="test">
       <img
         src="/img/footer_image-removebg-preview (1).png"
         alt="footer"
