core(git): add gitignore && delete .jpg images

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="saas/main.css" />
     <link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
 
     <script type="module" src="/main.js"></script>
+    
 
 
     <title>Domaine Chante Cévennes</title>
@@ -342,7 +342,7 @@
           <img src="img/ext_5.webp" alt="Gallery 2" class="gallery__img" />
         </figure>
         <figure class="gallery__item gallery__item--14">
-          <img src="img/piscine_3.jpg" alt="Gallery 14" class="gallery__img" />
+          <img src="img/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
         </figure>
       </section>
     </main>
