--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               studio sur-équipé avec vue sur les bois de chênes côté fenêtre et
               sur terrasse privative côté baie vitrée
             </p>
-            <a href="./pinson.html" class="btn btn--primary"
+            <a href="./pages/pinson.html" class="btn btn--primary"
               >Réserver maintenant</a
             >
           </div>
