--- a/pages/pinson.html
+++ b/pages/pinson.html
@@ -16,11 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/icon-font.css" />
+    
     <link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
 
-    <script type="module" src="main.js"></script>
+    <script type="module" src="/main.js"></script>
 
     <title>Domaine Chante Cévennes</title>
   </head>
@@ -29,7 +28,7 @@
       <div class="header__logo">
         <a href="#"
           ><img
-            src="img/logo-web-transparent.png"
+            src="/img/logo-web-transparent.png"
             alt="Logo"
             class="header__logo-img"
         /></a>
@@ -37,7 +36,7 @@
       <nav class="header__nav">
         <ul class="header__list">
           <li class="header__item">
-            <a href="./index.html" class="header__link"
+            <a href="/index.html" class="header__link"
               >Accueil
               <svg
                 class="header__link__graphic header__link__graphic--slide"
